fixed alignment issues of the buttons

--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ main{
   padding-top: 100px;
   text-align: center;
 }
+.left-btn{
+  padding-left: 0.5em;
+}
 .next{
   display:inline-block;
   padding: .1em .5em;
